<resources>
    <string name="app_name">ShushMe</string>
    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="settings_label">Settings</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="location_permissions">Location Permissions</string>

    <!--
    To get one, follow this link, follow the directions and press "Create" at the end:

    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=DA:6C:30:BF:AF:30:F7:33:FA:97:D0:C4:FC:A7:E1:5E:A8:91:DA:B8%3Bcom.carlospinan.googlemapsdemo

    You can also add your credentials to an existing key, using these values:

    Package name:
    DA:6C:30:BF:AF:30:F7:33:FA:97:D0:C4:FC:A7:E1:5E:A8:91:DA:B8

    SHA-1 certificate fingerprint:
    DA:6C:30:BF:AF:30:F7:33:FA:97:D0:C4:FC:A7:E1:5E:A8:91:DA:B8

    Alternatively, follow the directions here:
    https://developers.google.com/maps/documentation/android/start#get-key

    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
    string in this file.
    -->
    <string name="google_maps_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBOKfLWa8de1eOdh9ZwMkjMJhK4N1Amig0</string>
</resources>
