<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/dimen24"
    tools:context=".ui.dashboard.MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/settings_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen12"
        android:text="@string/settings_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="@dimen/dividerHeight"
        android:layout_marginTop="@dimen/dimen4"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/globe_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen4"
        android:paddingRight="@dimen/dimen8"
        android:paddingBottom="@dimen/dimen4"
        android:src="@drawable/ic_globe_primary_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enable_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enable_geofences"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/globe_image_view"
        app:layout_constraintTop_toTopOf="@id/globe_image_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/location_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen4"
        android:paddingRight="@dimen/dimen8"
        android:paddingBottom="@dimen/dimen4"
        android:src="@drawable/ic_my_location_primary_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/globe_image_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location_label_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen4"
        android:text="@string/location_permissions"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@id/location_image_view"
        app:layout_constraintTop_toTopOf="@id/location_image_view" />

    <CheckBox
        android:id="@+id/location_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/location_label_view"
        app:layout_constraintTop_toTopOf="@id/location_image_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_location_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_new_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_image_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/location_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_location_button" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="@dimen/dividerHeight"
        android:layout_marginTop="@dimen/dimen4"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/places_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        tools:listitem="@layout/item_place_card" />

</androidx.constraintlayout.widget.ConstraintLayout>